--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@ The above copyright notice and this permission notice shall be included in all c
       </div>
     </div>
   </nav>
-  <!-- End Navbar - coffee.jpg -->
-  <div class="page-header section-dark" style="background-image: url('./assets/img/antoine-barres.jpg')">
+  <!-- End Navbar - coffee.jpg - ./assets/img/antoine-barres.jpg -->
+  <div class="page-header section-dark" style="background-image: url('coffee.jpg')">
     <div class="filter"></div>
     <div class="content-center">
       <div class="container">
